Migrate to jdk 11
-change docker
-change pom

Change-Id: I5e3beb2b416671b20a7e235ac757ed18a75db4df
Issue-ID: EXTAPI-259
Signed-off-by: romaingimbert <romain.gimbert@orange.com>